[package]
name = "llman"
version = "0.1.0"
edition = "2024"

[dependencies]
openai_api_rust = "0.1.9"
clap = { version = "4.5.41", features = ["derive"] } 
home = "0.5.11"
indicatif = "0.18.0"
ollama-rs = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
gemini-rust = "1.1.0"
keyring = { version="3.6.3", features = ["linux-native-sync-persistent", "sync-secret-service", "crypto-rust"] }
chacha20poly1305 = "0.10"
rand = "0.9.2"
base64 = "0.22.1"